app/styles/folder-layout.scss
@use "@/app/styles/mixins" as *;

.folder-container {
  --margin-top: 16px;
  position: relative;
  margin-top: var(--margin-top);
  height: calc(100% - var(--margin-top));
  width: 100%;
  overflow: hidden;
  padding-top: var(--margin-top);
  > *:nth-child(2) {
    margin-top: var(--margin-top);
  }
}

.folder-tabs {
  display: flex;
  position: relative;
  left: 40px;
}

.folder-body {
  position: absolute;
  border-radius: 16px 16px 0 0;
  overflow: hidden;
  top: 100%;
  left: -40px;
  width: 100%;
  height: 100%;
  transition-duration: 100ms;
}

.folder-button {
  position: relative;
  font-family: var(--ff-gc);
  font-size: clamp(
    var(--mono-s-medium),
    calc(1.2rem + 1.2vw),
    var(--fs-folder-button)
  );
  line-height: var(--lh-folder-button);
  font-weight: normal;
  text-transform: uppercase;
  color: var(--greyscale-0);
  padding: 16px;
  background-color: var(--folder-color);
  border-radius: 24px 24px 0 0;
  left: 22px;
  bottom: -1px;
  width: 217px;
  height: 64px;
  text-align: center;
  cursor: pointer;
  text-decoration: none;
  transition-duration: 100ms;
  &:hover {
    transition-duration: 150ms;
  }
}

.folder-content {
  border-radius: 16px 16px 0 0;
  height: 100%;
  width: 100%;
  transition-duration: 150ms;
  overflow-y: auto;
  overscroll-behavior: none;
}

.folder-footer {
  position: absolute;
  bottom: 0;
  z-index: 100;
  background-color: var(--color-red-100);
  width: 100%;
  height: var(--footer-height);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 clamp(16px, 4vw, 40px);
  color: var(--greyscale-0);
  font-size: clamp(
    var(--mono-xs-regular),
    calc(0.8rem + 0.8vw),
    var(--fs-footer)
  );
  font-weight: 400;
}

@include mobile-breakpoint {
  .folder-container {
    > *:nth-child(2) {
      margin-top: 0;
    }
  }
  .folder-content {
    border-radius: 0px;
  }
  .folder-button {
    transform: none !important;
  }
  .folder-tabs {
    width: 80vw;
    left: -18px;
  }
  .folder-button {
    flex: 1;
    min-width: 96px;
    width: auto;
    height: 48px;
    padding: 8px;
    border-radius: 8px 8px 0 0;
  }
  .folder-body {
    display: none;
  }
}

